[package]
name = "dmjit"
version = "0.1.0"
authors = ["Simon Ogorodnik <simon.ogorodnik@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auxtools = { git = "https://github.com/jupyterkat/auxtools", branch = "austation-aux"}
simple-logging = { version = "2.0.2" }
log = { version = "0.4.14" }
log-panics = { version = "2", features = ["with-backtrace"] }
rayon = "1.5.1"
rand = "0.8.4"
measure_time = "0.8.0"
dmasm = { git = "https://github.com/ss220-space/dmasm", rev = "709231411c5a7c41a2f40440aea77b9b6552caa1" }
inkwell = { git = "https://github.com/TheDan64/inkwell", default-features = false, branch = "master", features = ["llvm13-0", "target-x86"] }
libc = "0.2.97"
typed-arena = "2.0.1"
criterion = { version = "0.3.5", optional = true}

[dev-dependencies]
test_common = { path = "test_common" }

[build-dependencies]
vergen = "6.0.0"
anyhow = "1.0.51"

#[lib]
#crate-type = ["cdylib"]

[[bench]]
name = "bench"
harness = false

[features]
default = ["test_time", "test_utils", "bench_utils", "tools"]
test_time = []
test_utils = []
bench_utils = ["criterion", "test_utils"]
tools = []

[profile.release-dist]
inherits = "release"